[FIX] website_blog: fix very long list of blogs in navbar
Steps to reproduce:

- Go to the "/blog" page.
- Click on "Configuration > Blogs" in the main navbar.
- Create at least 15 new blogs with "Astronomy" as the name.
- Go back to the "/blog" page.
- Bug: The navbar overflows the page to the right, causing a horizontal
scrollbar to appear.

After this commit, the navbar no longer overflows, and the list items
are displayed on multiple lines.

opw-4507558

closes odoo/odoo#196745

X-original-commit: deeebef38af48ecd100e599192d812c472057478

--- a/addons/website_blog/static/src/scss/website_blog.scss
+++ b/addons/website_blog/static/src/scss/website_blog.scss
@@ -278,6 +278,15 @@ $o-wblog-loader-size: 50px;
 
     }
 
+    > nav > .container {
+        // If the navbar contains at least 10 items (random choice), the search
+        // input is placed at the top to avoid being centered in a multi-line
+        // navbar, which wouldn’t look good.
+        &:has(> ul.navbar-nav .nav-item:nth-child(10)) .o_searchbar_form {
+            align-self: start;
+        }
+    }
+
     //  Editor Helpers
     // ==============================================
     body.editor_enable & {
